--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.5",
+    "@react-three/fiber": "^9.0.4",
+    "@types/three": "^0.174.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "three": "^0.174.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
