--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.5",
+    "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.0.4",
     "@types/three": "^0.174.0",
     "next": "15.2.1",
